--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "webpack-dev-server"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "3.2.3",
-    "typescript": "2.5.3",
-    "webpack": "2.2.0",
-    "webpack-dev-server": "2.2.0"
+    "awesome-typescript-loader": "5.2.1",
+    "typescript": "3.3.3333",
+    "webpack": "4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "3.2.1"
   }
 }
